add loginhandler, resourcenaming for mysql credential, check credential using jquery javascript

--- a/hello/src/main/webapp/WEB-INF/web.xml
+++ b/hello/src/main/webapp/WEB-INF/web.xml
@@ -4,8 +4,18 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <filter>
+  	<filter-name>SessionFilter</filter-name>
+  	<display-name>SessionFilter</display-name>
+  	<description></description>
+  	<filter-class>com.candev.tuto.servlet.SessionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>SessionFilter</filter-name>
+  	<url-pattern>/SessionFilter</url-pattern>
+  </filter-mapping>
   <listener>
-  	<listener-class>com.candev.tuto.StartStopListener</listener-class>
+  	<listener-class>com.candev.tuto.servlet.StartStopListener</listener-class>
   </listener>
 
   <servlet>
