--- a/hello/pom.xml
+++ b/hello/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ca.canadiandevelopers.web</groupId>
-  <artifactId>hello</artifactId>
+  <artifactId>sweepee</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>hello Maven Webapp</name>
+  <name>sweepee Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -21,6 +21,6 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>hello</finalName>
+    <finalName>sweepee</finalName>
   </build>
 </project>
